# vellis

./: .gitignore  AGENTS.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  LICENSE  README.md  SECURITY.md  justfile  pyproject.toml
.claude/skills/: architecture-projection  component-authoring  documentation-sync  model-hygiene-review  python-component-implementation  rtg-federation-control-plane  rtg-knowledge-graph-mcp  rtg-schema-design  sysml-reference  sysml-view-authoring
.data/: README.md
.github/: pull_request_template.md
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: check.yml
apps/: __init__.py
apps/personal_launcher/: README.md  __init__.py  __main__.py  catalog_store.py  desktop.py  main.py  runtime.py  server.py  service.py
apps/rtg_federation/: __init__.py  __main__.py  canned_queries.py  main.py  mcp_server.py  registry_io.py  semantic_openai.py  toolset.py
apps/rtg_knowledge_graph/: README.md  __init__.py  __main__.py  application_binding.py  config.py  (+14 more)
components/: __init__.py
docs/: README.md  agentic-mbse-engineering-system.md  sysml-modeling.md
model/: README.md  implementation-drift.yaml  model-status.json  model.lock.json
tests/: test_agent_skill_exposure.py  test_design_guidance_docs.py  test_model_views.py  test_repo_release_readiness.py  test_repository_layout.py  test_rtg_eval_prompt_doc.py  test_rtg_federation_eval.py  test_rtg_federation_workload_eval.py  test_rtg_graph_registry_tool.py  test_schema_domain_prototypes.py  test_sysml_diagrams.py  test_sysml_model.py  test_sysml_reference.py
tools/: model_layout.py  model_tool.py  model_views.py  package_check.py  rtg_federation_eval.py  rtg_federation_workload_eval.py  rtg_graph_registry.py  sync_agent_skills.py  sysml_diagrams.py  sysml_reference.py  sysml_validator.py  validate_skills.py
vellis/: __init__.py
(+1528 files in other folders)
