[build-system]
requires = [
    "setuptools>=83.0.0",
    "wheel",
]
build-backend = "setuptools.build_meta"

[project]
name = "vellis"
version = "0.1.0"
description = "Reusable software components and tooling for AI-native software construction."
readme = "README.md"
requires-python = ">=3.14"
license = "Apache-2.0"
license-files = [
    "LICENSE",
]
authors = [
    { name = "Vellis contributors" },
]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.14",
    "Topic :: Software Development :: Libraries",
]
dependencies = [
    "fastmcp>=3.4.2,<4",
]

[project.scripts]
vellis-rtg-knowledge-graph = "apps.rtg_knowledge_graph.main:main"

[project.urls]
Repository = "https://github.com/volantlabs/vellis"
Issues = "https://github.com/volantlabs/vellis/issues"

[tool.setuptools.packages.find]
where = [
    ".",
]
namespaces = false
include = [
    "apps*",
    "components*",
    "vellis*",
]
exclude = [
    "tests*",
    "apps.*.tests*",
    "components.*.tests*",
]

[tool.setuptools.package-data]
"apps.rtg_knowledge_graph" = [
    "resources/*.json",
]

[dependency-groups]
dev = [
    "basedpyright>=1.39.9",
    "mcp>=1.28.1,<2",
    "pytest>=8.0",
    "pyyaml>=6.0.3",
    "ruff>=0.15.20",
]

[tool.basedpyright]
include = [
    "apps",
    "components",
    "tools",
]
pythonVersion = "3.14"
typeCheckingMode = "standard"

[tool.pytest.ini_options]
pythonpath = [
    ".",
]
testpaths = [
    "apps",
    "components",
    "tests",
]
python_files = [
    "test_*.py",
]

[tool.ruff]
line-length = 100
target-version = "py314"

[tool.ruff.lint]
select = [
    "E",
    "F",
    "I",
    "UP",
    "B",
]
